--- a/_config.yml
+++ b/_config.yml
@@ -111,12 +111,12 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "United Kingdom"
-  email            : "matt.rufflesmcghie@googlemail.com"
+  email            : 
 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
+      url: mailto:"matt.rufflesmcghie@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
