--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,11 @@
 # remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+
 # Site Settings
 locale                   : "en-US"
 title                    : "Ruffles-McGhie Home"
