--- a/_config.yml
+++ b/_config.yml
@@ -298,3 +298,19 @@ defaults:
       comments: # true
       share: true
       related: true
+      
+  # _portfolio
+
+  - scope:
+
+      path: ""
+
+      type: portfolio
+
+    values:
+
+      layout: single
+
+      author_profile: false
+
+      share: true
