--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ analytics:
 # Site Author
 author:
   name             : "Matt Ruffles-McGhie"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/resume-profile.png"
   bio              : "I am an **amazing** person."
   location         : "United Kingdom"
   email            : 
