--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,29 @@
+Matt Ruffles-McGhie:
+  name             : "Matt Ruffles-McGhie"
+  avatar           : "/assets/images/resume-profile2.png"
+  bio              : "I am an **amazing** person."
+  location         : "United Kingdom"
+  email            : 
+
+  links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: mailto:"matt.rufflesmcghie@gmail.com"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      # url: "https://your-website.com"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      # url: "https://twitter.com/"
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook-square"
+      # url: "https://facebook.com/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      # url: "https://github.com/"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      # url: "https://instagram.com/"
 
 Billy Rick:
   name        : "Billy Rick"
