--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 Matt Ruffles-McGhie:
   name             : "Matt Ruffles-McGhie"
   avatar           : "/assets/images/resume-profile2.png"
-  bio              : "I am an **amazing** person."
+  bio              : "I am **amazing**."
   location         : "United Kingdom"
   links:
     - label: "Email"
