--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   #  url: https://mmistakes.github.io/minimal-mistakes/about/
   - title: "Posts"
     url: /year-archive/
-  - title: "Portfolios"
-    url: /portfolio
-  - title: "Sitemap"
-    url: /sitemap/
+  - title: "Authors"
+    url: /authors
+  # - title: "Sitemap"
+  # url: /sitemap/
